# compress-zip

./: .gitignore  LICENSE  README.md
models/: v000_eng.czm  v001_eng.czm
python/: README.md  pyproject.toml
python/compress_zip/: __init__.py  __main__.py  arith_coder.py  attention.py  export.py  file_format.py  linear.py  lut.py  model.py  primitives.py  reglu.py  rmsnorm.py  softmax_cdf.py
python/tests/: __init__.py  test_arith_coder.py  test_cross_language.py  test_lut.py  test_primitives.py
rust/: Cargo.toml
rust/src/: arith_coder.rs  attention.rs  file_format.rs  lib.rs  linear.rs  lut.rs  main.rs  model.rs  primitives.rs  reglu.rs  rmsnorm.rs  safetensors.rs  softmax_cdf.rs  tiktoken.rs
