[package]
name = "compress_zip"
version = "0.1.0"
edition = "2021"
description = "Deterministic neural compression verifier"
license = "MIT"

[lib]
name = "compress_zip"
path = "src/lib.rs"

[dependencies]
memmap2 = "0.9.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fancy-regex = "0.16.1"
bstr = "1.5.0"
sha2 = "0.10"
md-5 = "0.10"
half = "2.4"
clap = { version = "4.5", features = ["derive"] }
zstd = "0.13"
brotli = "6.0"
rayon = "1.10"

[dev-dependencies]
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
